scss: manual fixing

--- a/civic_europe/assets/scss/all.scss
+++ b/civic_europe/assets/scss/all.scss
@@ -4,7 +4,7 @@
 @import "core/variables";
 
 // Must be loaded after above due to use of default
-@import "~bootstrap/scss/bootstrap.scss";
+@import "~bootstrap/scss/bootstrap";
 
 @import "core/type";
 @import "core/basics";
