--- a/civic_europe/assets/scss/components/_login-register.scss
+++ b/civic_europe/assets/scss/components/_login-register.scss
@@ -3,7 +3,7 @@
 }
 
 .login-register {
-    padding-top: 4*$spacer;
+    padding-top: 4 * $spacer;
 }
 
 .login-register-tabs {
@@ -15,8 +15,8 @@
 }
 
 .login-register-form {
-    background-color: white;
-    padding: 2.5*$spacer 2*$spacer;
+    background-color: $white;
+    padding: 2.5 * $spacer 2 * $spacer;
     box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -24,7 +24,7 @@
 
 .socialaccounts {
     text-align: center;
-    margin-top: 2*$spacer;
+    margin-top: 2 * $spacer;
 }
 
 .socialaccounts-heading {
@@ -38,6 +38,6 @@
 }
 
 .socialaccount-provider {
-    margin-bottom: 0.5*$spacer;
+    margin-bottom: 0.5 * $spacer;
     text-transform: none;
 }
