--- a/civic_europe/assets/scss/core/_buttons.scss
+++ b/civic_europe/assets/scss/core/_buttons.scss
@@ -35,7 +35,7 @@
 
     &.disabled,
     &[disabled],
-    fieldset[disabled] & {
+    fieldset[disabled] & { /*  stylelint-disable-line  */
         &.focus,
         &:focus,
         &:hover {
@@ -83,11 +83,11 @@
     .fa,
     .fas,
     .far {
-        padding-right: 0.25*$spacer;
+        padding-right: 0.25 * $spacer;
     }
 
     @media screen and (max-width: $screen-sm-max) {
-        margin-top: 0.5*$spacer;
+        margin-top: 0.5 * $spacer;
         font-size: $font-size-base;
     }
 }
@@ -119,7 +119,7 @@
 .btn-support:active {
     background-color: transparent;
     padding: 0;
-    color: white;
+    color: $white;
     box-shadow: none;
 
     p {
@@ -139,7 +139,7 @@
 .btn-addon:focus,
 .btn-addon:hover,
 .btn-addon:active {
-    color: white;
+    color: $white;
     outline: none;
     box-shadow: none;
     cursor: default;
